--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
  <div class="allcontent">
   <div class="qr_container">
-   <img src="Images/image-qr-code.png" alt="QR Code">
+   <img src="images/image-qr-code.png" alt="QR Code">
   </div>
   <div class="textcontent">
    <h3>Improve your front-end skills by creating projects</h3>
@@ -22,7 +22,7 @@
  </div>
  <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Ezejim Amblessed</a>.
+  Coded by <a href="https://twitter.com/codibility">Ezejim Amblessed</a>.
  </div>
 </body>
 
